# Qmorse

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-python-package.yml
.gitignore/Qmorse.egg-info/: PKG-INFO
Beeps/: 1_short.pcm
Qmorse/: __init__.py  bimorse.py  core.py  soundmorse.py  vimorse.py
Qmorse/Beeps/: 1_long.pcm
core/: soundmorse.py
core/sounds/: 1_long.pcm  1_short.pcm
release/: README.md
